@@ -158,8 +158,10 @@ public class VilkårTjeneste {
 
     public void settVilkårutfallTilIkkeVurdert(Long behandlingId, VilkårType vilkårType, NavigableSet<DatoIntervallEntitet> vilkårsPerioder) {
         if (vilkårsPerioder.isEmpty()) {
+            log.info("Ingen perioder å tilbakestille.");
             return;
         }
+        log.info("Setter {} til vurdering", vilkårsPerioder);
         Behandling behandling = hentBehandling(behandlingId);
         var vilkårsPerioderTilVurderingTjeneste = getVilkårsPerioderTilVurderingTjeneste(behandling);
         vilkårResultatRepository.tilbakestillPerioder(behandlingId, vilkårType, vilkårsPerioderTilVurderingTjeneste.getKantIKantVurderer(), vilkårsPerioder);
@@ -179,7 +181,14 @@ public class VilkårTjeneste {
         return behandlingRepository.hentBehandling(behandlingId);
     }
 
-    public NavigableSet<DatoIntervallEntitet> utledPerioderTilVurdering(BehandlingReferanse ref, VilkårType vilkårType, boolean skalIgnorereAvslåttePerioder) {
+    public NavigableSet<DatoIntervallEntitet> utledPerioderTilVurdering(BehandlingReferanse ref, VilkårType vilkårType,
+                                                                        boolean skalIgnorereAvslåttePerioder) {
+        return utledPerioderTilVurdering(ref, vilkårType, skalIgnorereAvslåttePerioder, false);
+    }
+
+    public NavigableSet<DatoIntervallEntitet> utledPerioderTilVurdering(BehandlingReferanse ref, VilkårType vilkårType,
+                                                                        boolean skalIgnorereAvslåttePerioder,
+                                                                        boolean skalIgnorereAvslagPåKompletthet) {
         Long behandlingId = ref.getBehandlingId();
         var behandling = hentBehandling(behandlingId);
         var perioderTilVurderingTjeneste = getVilkårsPerioderTilVurderingTjeneste(behandling);
@@ -196,12 +205,15 @@ public class VilkårTjeneste {
             var avslåttePerioder = vilkår.get()
                 .getPerioder()
                 .stream()
-                .filter(it -> Utfall.IKKE_OPPFYLT.equals(it.getUtfall()))
-                .map(VilkårPeriode::getPeriode)
-                .collect(Collectors.toList());
-            perioder.removeAll(avslåttePerioder);
+                .filter(it -> skalFiltreresBort(it, skalIgnorereAvslagPåKompletthet))
+                .map(VilkårPeriode::getPeriode).toList();
+            avslåttePerioder.forEach(perioder::remove);
         }
         return Collections.unmodifiableNavigableSet(perioder);
+    }
+
+    private boolean skalFiltreresBort(VilkårPeriode it, boolean skalIgnoreAvslagPåKompletthet) {
+        return Utfall.IKKE_OPPFYLT.equals(it.getUtfall()) && (skalIgnoreAvslagPåKompletthet || !Avslagsårsak.MANGLENDE_INNTEKTSGRUNNLAG.equals(it.getAvslagsårsak()));
     }
 
     public Optional<Vilkårene> hentHvisEksisterer(Long behandlingId) {
